--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -9,6 +9,7 @@
             background-repeat: no-repeat; 
             background-size: cover; 
             background-image: url('https://i.ibb.co/ggWykJY/cool-desktop-wallpaper-wallpapers-backgrounds-images-art-photos-pictures-free-best-1920x1080-coolwal.jpg');
+            position: relative; /* Needed for the absolutely positioned images */
         }
         h1, h6 {
             text-align: center;
@@ -23,13 +24,10 @@
     <br><br><br><br>
 
     <script>
-        // Global movement flags
+        // Global variables 
         let moveImg1 = { left: false, up: false, right: false, down: false };
         let moveImg2 = { left: false, up: false, right: false, down: false };
-
-        // Background movement
-        let backgroundX = 0;
-        let backgroundInterval;
+        let backgroundPositionX = 0; // Track background position
 
         // Function to check if two elements are colliding
         function myHitOther(my1, my2) {
@@ -76,18 +74,14 @@
         // Set interval to regularly move images
         setInterval(moveImages, 100);
 
-        // Background movement function
+        // Function to move the background
         function moveBackground() {
-            backgroundX -= 5; // Move left by 5 pixels
-            document.getElementById('myBody').style.backgroundPosition = backgroundX + 'px 0'; // Update background position
+            backgroundPositionX -= 2; // Change this value to adjust speed
+            document.getElementById('myBody').style.backgroundPosition = backgroundPositionX + 'px 0'; // Move left
         }
 
-        // Start background movement on button click
-        function startBackgroundMovement() {
-            if (!backgroundInterval) { // Ensure only one interval is active
-                backgroundInterval = setInterval(moveBackground, 100); // Move the background every 100 milliseconds
-            }
-        }
+        // Set interval for background movement
+        setInterval(moveBackground, 100); // Adjust the interval for smoother movement
 
         // Keydown event listener for movement
         document.addEventListener('keydown', function(event) {
@@ -160,178 +154,11 @@
     <img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
     <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:250px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
 
-    <input type="button" value="Auto Background Left" onclick="startBackgroundMovement()">
+    <input type="button" value="Auto Background Left" onclick="{
+        // Background auto movement is now automatic and doesn't require a button
+        alert('The background moves automatically to the left. You can use keyboard controls for the images.');
+    }">
 
-    <input type="button" value="Image Right Fast Button" onTouchStart="{this.click(); event.preventDefault();}" onclick="{
-        document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) + 10 + 'px';
-        myCheckHit(); // Checks for all collisions
-    }"><br><br>
-
-</body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T2A11 Game Template</title>
-    <style>
-        body {
-            background-repeat: no-repeat; 
-            background-size: cover; 
-            background-image: url('https://i.ibb.co/ggWykJY/cool-desktop-wallpaper-wallpapers-backgrounds-images-art-photos-pictures-free-best-1920x1080-coolwal.jpg');
-            position: relative; /* Make sure to set position for child elements */
-            overflow: hidden; /* Prevent scrollbars from appearing */
-        }
-        h1, h6 {
-            text-align: center;
-            color: white; /* Change text color for visibility */
-        }
-    </style>
-</head>
-<body id="myBody">
-
-    <h1>T2A11 Game Template by Fred</h1>
-    <h6>Version 0.0.1</h6>
-    <br><br><br><br>
-
-    <script>
-        // Global movement flags
-        let moveImg1 = { left: false, up: false, right: false, down: false };
-        let moveImg2 = { left: false, up: false, right: false, down: false };
-        
-        let myClock; // For background movement tracking
-        let myGlobalX = 0; // Movement offset for the background
-
-        // Function to check if two elements are colliding
-        function myHitOther(my1, my2) {
-            let left1 = parseInt(document.getElementById(my1).style.left);
-            let right1 = left1 + parseInt(document.getElementById(my1).style.width);
-            let top1 = parseInt(document.getElementById(my1).style.top);
-            let bottom1 = top1 + parseInt(document.getElementById(my1).style.height);
-            let left2 = parseInt(document.getElementById(my2).style.left);
-            let right2 = left2 + parseInt(document.getElementById(my2).style.width);
-            let top2 = parseInt(document.getElementById(my2).style.top);
-            let bottom2 = top2 + parseInt(document.getElementById(my2).style.height);
-            return (right1 >= left2 && bottom1 >= top2 && left1 <= right2 && top1 <= bottom2);
-        }
-
-        // Function to check for collisions
-        function myCheckHit() {
-            if (myHitOther('myImg01', 'myImg02')) {
-                alert('You lose');
-                document.getElementById('myImg01').style.left = '20px';
-                location.href = 't2a13-keydown.html'; // Go to your next level
-            }
-        }
-
-        // Function to move images based on movement flags
-        function moveImages() {
-            const img1 = document.getElementById('myImg01');
-            const img2 = document.getElementById('myImg02');
-
-            // Move myImg01 (Greninja) based on flags
-            if (moveImg1.left) img1.style.left = (parseInt(img1.style.left) - 5) + 'px';
-            if (moveImg1.up) img1.style.top = (parseInt(img1.style.top) - 5) + 'px';
-            if (moveImg1.right) img1.style.left = (parseInt(img1.style.left) + 5) + 'px';
-            if (moveImg1.down) img1.style.top = (parseInt(img1.style.top) + 5) + 'px';
-
-            // Move myImg02 (Charizard) based on flags
-            if (moveImg2.left) img2.style.left = (parseInt(img2.style.left) - 5) + 'px';
-            if (moveImg2.up) img2.style.top = (parseInt(img2.style.top) - 5) + 'px';
-            if (moveImg2.right) img2.style.left = (parseInt(img2.style.left) + 5) + 'px';
-            if (moveImg2.down) img2.style.top = (parseInt(img2.style.top) + 5) + 'px';
-
-            myCheckHit(); // Check for collisions
-        }
-
-        // Set interval to regularly move images
-        setInterval(moveImages, 100);
-
-        // Keydown event listener for movement
-        document.addEventListener('keydown', function(event) {
-            switch (event.key) {
-                // Control for myImg01 (Greninja) using arrow keys
-                case 'ArrowLeft':
-                    moveImg1.left = true;
-                    break;
-                case 'ArrowUp':
-                    moveImg1.up = true;
-                    break;
-                case 'ArrowRight':
-                    moveImg1.right = true;
-                    break;
-                case 'ArrowDown':
-                    moveImg1.down = true;
-                    break;
-
-                // Control for myImg02 (Charizard) using WASD keys
-                case 'a':
-                    moveImg2.left = true;
-                    break;
-                case 'w':
-                    moveImg2.up = true;
-                    break;
-                case 'd':
-                    moveImg2.right = true;
-                    break;
-                case 's':
-                    moveImg2.down = true;
-                    break;
-            }
-        });
-
-        // Keyup event listener to stop movement when key is released
-        document.addEventListener('keyup', function(event) {
-            switch (event.key) {
-                // Stop movement for myImg01
-                case 'ArrowLeft':
-                    moveImg1.left = false;
-                    break;
-                case 'ArrowUp':
-                    moveImg1.up = false;
-                    break;
-                case 'ArrowRight':
-                    moveImg1.right = false;
-                    break;
-                case 'ArrowDown':
-                    moveImg1.down = false;
-                    break;
-
-                // Stop movement for myImg02
-                case 'a':
-                    moveImg2.left = false;
-                    break;
-                case 'w':
-                    moveImg2.up = false;
-                    break;
-                case 'd':
-                    moveImg2.right = false;
-                    break;
-                case 's':
-                    moveImg2.down = false;
-                    break;
-            }
-        });
-
-        // Function to start moving the background
-        function startBackgroundMovement() {
-            clearInterval(myClock); // Clear any existing interval
-            myClock = setInterval(function() {
-                myGlobalX -= 5; // Move the background left
-                document.getElementById('myBody').style.backgroundPosition = myGlobalX + 'px 0px';
-            }, 100); // Adjust the speed of the background movement here
-        }
-
-        // Event listener for auto background button
-        document.getElementById("autoMove").addEventListener("click", startBackgroundMovement);
-
-    </script>
-
-    <img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
-    <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:250px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
-
-    <input type="button" id="autoMove" value="Auto Background Left">
-    
     <input type="button" value="Image Right Fast Button" onTouchStart="{this.click(); event.preventDefault();}" onclick="{
         document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) + 10 + 'px';
         myCheckHit(); // Checks for all collisions
