--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -68,11 +68,13 @@
     <script>
         // Global movement flags
         let moveImg1 = { left: false, up: false, right: false, down: false };
-        let moveImg2 = { left: false, up: false, right: false, down: false };
         
         // Background movement variables
         let moveBackground = false;
         let myGlobalX = 0;
+
+        const img1 = document.getElementById('myImg01');
+        const img2 = document.getElementById('myImg02');
 
         // Function to check if two elements are colliding
         function myHitOther(my1, my2) {
@@ -97,28 +99,35 @@
 
         // Function to move images based on movement flags
         function moveImages() {
-            const img1 = document.getElementById('myImg01');
-            const img2 = document.getElementById('myImg02');
-
             // Move myImg01 (Greninja) based on flags
             if (moveImg1.left) img1.style.left = (parseInt(img1.style.left) - 5) + 'px';
             if (moveImg1.up) img1.style.top = (parseInt(img1.style.top) - 5) + 'px';
             if (moveImg1.right) img1.style.left = (parseInt(img1.style.left) + 5) + 'px';
             if (moveImg1.down) img1.style.top = (parseInt(img1.style.top) + 5) + 'px';
 
-            // Move myImg02 (Charizard) based on flags
-            if (moveImg2.left) img2.style.left = (parseInt(img2.style.left) - 5) + 'px';
-            if (moveImg2.up) img2.style.top = (parseInt(img2.style.top) - 5) + 'px';
-            if (moveImg2.right) img2.style.left = (parseInt(img2.style.left) + 5) + 'px';
-            if (moveImg2.down) img2.style.top = (parseInt(img2.style.top) + 5) + 'px';
-
-            // Move background if the flag is set
-            if (moveBackground) {
-                myGlobalX -= 5;
-                document.getElementById('myBody').style.backgroundPosition = myGlobalX + 'px 0px';
-            }
+            // Move myImg02 (Charizard) to follow myImg01 (Greninja)
+            followGreninja();
 
             myCheckHit(); // Check for collisions
+        }
+
+        // Function for myImg02 (Charizard) to follow myImg01 (Greninja)
+        function followGreninja() {
+            const img1Rect = img1.getBoundingClientRect();
+            const img2Rect = img2.getBoundingClientRect();
+
+            const dx = img1Rect.left + img1Rect.width / 2 - (img2Rect.left + img2Rect.width / 2);
+            const dy = img1Rect.top + img1Rect.height / 2 - (img2Rect.top + img2Rect.height / 2);
+            const distance = Math.sqrt(dx * dx + dy * dy);
+
+            // If within a certain distance, move towards Greninja
+            if (distance > 5) { // Adjust this to make following more or less aggressive
+                const speed = 1; // Speed of Charizard
+                const normalizationFactor = distance / speed; // Normalization factor
+
+                img2.style.left = (parseInt(img2.style.left) + (dx / normalizationFactor)) + 'px';
+                img2.style.top = (parseInt(img2.style.top) + (dy / normalizationFactor)) + 'px';
+            }
         }
 
         // Set interval to regularly move images and background
@@ -139,18 +148,6 @@
                 case 'ArrowDown':
                     moveImg1.down = true;
                     break;
-                case 'a':
-                    moveImg2.left = true;
-                    break;
-                case 'w':
-                    moveImg2.up = true;
-                    break;
-                case 'd':
-                    moveImg2.right = true;
-                    break;
-                case 's':
-                    moveImg2.down = true;
-                    break;
             }
         });
 
@@ -168,18 +165,6 @@
                     break;
                 case 'ArrowDown':
                     moveImg1.down = false;
-                    break;
-                case 'a':
-                    moveImg2.left = false;
-                    break;
-                case 'w':
-                    moveImg2.up = false;
-                    break;
-                case 'd':
-                    moveImg2.right = false;
-                    break;
-                case 's':
-                    moveImg2.down = false;
                     break;
             }
         });
@@ -203,10 +188,19 @@
             }
         }
 
+        // Initialization for images positions
+        img1.style.position = 'absolute';
+        img1.style.left = '50px';
+        img1.style.top = '50px';
+
+        img2.style.position = 'absolute';
+        img2.style.left = '300px'; // Initially position myImg02 on the right side
+        img2.style.top = '300px'; // Adjust as needed
+
     </script>
 
-    <img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
-    <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:250px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
+    <img id="myImg01" style="width:100px; height:80px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
+    <img id="myImg02" style="width:100px; height:80px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
 
     <input type="button" id="autoBackgroundButton" value="Start Background Movement" onclick="toggleBackgroundMovement()">
 
