--- a/public/t2a21-canvas-aden.html
+++ b/public/t2a21-canvas-aden.html
@@ -54,6 +54,7 @@
     <h2 align="center">t2a08-canvas by Fred</h2>
 
     <div>
+        <!-- Button to draw an animated triangle -->
         <button class="button" onclick="startAnimatedTriangle();">Animate Triangle</button>
         <button class="button" onclick="drawLine();">.lineTo(30,200)</button>
         <button class="button" onclick="drawArc();">.arc(95, 50, 40, 0, 2 * Math.PI)</button>
@@ -115,12 +116,15 @@
                         drawLine(lastX, lastY, x, y);
                         break;
                     case 'rectangle':
+                        myContext.clearRect(0, 0, myCanvas.width, myCanvas.height); // Clear before redrawing
                         drawRectangle(lastX, lastY, x, y);
                         break;
                     case 'circle':
+                        myContext.clearRect(0, 0, myCanvas.width, myCanvas.height); // Clear before redrawing
                         drawCircle(lastX, lastY, x, y);
                         break;
                     case 'triangle':
+                        myContext.clearRect(0, 0, myCanvas.width, myCanvas.height); // Clear before redrawing
                         drawTriangle(lastX, lastY, x, y);
                         break;
                 }
@@ -131,6 +135,7 @@
 
         myCanvas.addEventListener('mouseup', () => {
             drawing = false;
+            finalizeShape(); // Finalize the shape if not free drawing
         });
 
         myCanvas.addEventListener('mouseout', () => {
@@ -328,18 +333,18 @@
         }
 
         function clearRectangle() {
-            myContext.clearRect(20, 20, 50, 50); // This clears a small section
+            myContext.clearRect(20, 20, 50, 50);
         }
 
         function clearAll() {
-            myContext.clearRect(0, 0, myCanvas.width, myCanvas.height); // Clear the whole canvas
+            myContext.clearRect(0, 0, myCanvas.width, myCanvas.height);
         }
 
         function finalizeShape() {
             // Finalize the shape for rectangle, circle, triangle mode
             // This function is simplified as needed
         }
-
+        
         function setDrawingMode(mode) {
             drawingMode = mode;
         }
